[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background/sword_on_ground.png" type="Texture" id=1]
[ext_resource path="res://assets/font/Silver.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/WelcomeMenu.gd" type="Script" id=3]
[ext_resource path="res://Audio/Sound effect/Background music/mixkit-epical-drums-05-680.mp3" type="AudioStream" id=4]
[ext_resource path="res://Audio/Sound effect/UI_sound/button-124476.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
use_filter = true
extra_spacing_char = 5
extra_spacing_space = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 5
extra_spacing_char = 7
font_data = ExtResource( 2 )

[node name="WelcomeMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.87451, 0.894118, 0.87451, 1 )
margin_right = 960.0
margin_bottom = 500.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 3.0
margin_right = 1025.0
margin_bottom = 147.0

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.956863, 0.0352941, 0.0352941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "MUTANT SLAYER"
align = 1
valign = 1

[node name="Button_container" type="MarginContainer" parent="."]
anchor_left = 0.4
anchor_top = 0.354
anchor_right = 0.45
anchor_bottom = 0.354
margin_left = 15.0
margin_right = 119.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Button_container"]
margin_right = 169.0
margin_bottom = 194.0

[node name="MarginContainer" type="MarginContainer" parent="Button_container/VBoxContainer"]
margin_right = 169.0
margin_bottom = 62.0

[node name="Level" type="Button" parent="Button_container/VBoxContainer/MarginContainer"]
margin_right = 169.0
margin_bottom = 62.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Level"
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="Button_container/VBoxContainer"]
margin_top = 66.0
margin_right = 169.0
margin_bottom = 128.0

[node name="gameplay" type="Button" parent="Button_container/VBoxContainer/MarginContainer2"]
margin_right = 169.0
margin_bottom = 62.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "GamePlay"
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="Button_container/VBoxContainer"]
margin_top = 132.0
margin_right = 169.0
margin_bottom = 194.0

[node name="exit" type="Button" parent="Button_container/VBoxContainer/MarginContainer3"]
margin_right = 169.0
margin_bottom = 62.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Exit"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="pressed" from="Button_container/VBoxContainer/MarginContainer/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="Button_container/VBoxContainer/MarginContainer2/gameplay" to="." method="_on_gameplay_pressed"]
[connection signal="pressed" from="Button_container/VBoxContainer/MarginContainer3/exit" to="." method="_on_exit_pressed"]
